# notes

./: .gitignore  CHANGELOG.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.module.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 0001_initial.sql  0002_add_note_filename.sql
src-tauri/src/: lib.rs  stt.rs
src/app/: Sidebar.module.css  Sidebar.tsx  TabBar.module.css  TabBar.tsx  Workspace.module.css  Workspace.tsx
src/components/: index.ts
src/components/Badge/: Badge.module.css  Badge.tsx
src/components/Button/: Button.module.css  Button.tsx
src/components/ColorSwatch/: ColorPicker.module.css  ColorPicker.tsx
src/components/ConfirmDialog/: ConfirmDialog.tsx
src/components/ContextMenu/: ContextMenu.module.css  ContextMenu.tsx
src/components/EmptyState/: EmptyState.module.css  EmptyState.tsx
src/components/IconButton/: IconButton.module.css  IconButton.tsx
src/components/Input/: Input.module.css  Input.tsx
src/components/ListeningIndicator/: ListeningIndicator.module.css  ListeningIndicator.tsx
src/components/Markdown/: MarkdownView.tsx  MarkdownViewLazy.tsx
src/components/Menu/: Menu.module.css  Menu.tsx
src/components/Modal/: Modal.module.css  Modal.tsx
src/components/NoteCard/: NoteListRow.module.css  NoteListRow.tsx  StickyNote.module.css  StickyNote.tsx
src/components/Pill/: SaveStatePill.module.css  SaveStatePill.tsx
src/components/Segmented/: Segmented.module.css  Segmented.tsx
src/components/Sidebar/: SidebarItem.module.css  SidebarItem.tsx
src/hooks/: useDraft.ts  useHotkeys.ts  useTheme.ts
src/lib/: constants.ts  db.ts
src/store/: bootstrap.ts  useBootStore.ts  useFoldersStore.ts  useNotesStore.ts  useSettingsStore.ts  useSttStore.ts  useTabsStore.ts  useUIStore.ts
src/styles/: fonts.css  global.css  reset.css  tokens.css
src/types/: index.ts
src/utils/: cn.ts  debounce.ts  dnd.ts  export.ts  id.ts  markdown.ts  perf.ts  time.ts
(+26 files in other folders)
